--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.12.4",
     "body-parser": "1.14.2",
     "axios": "^0.19.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0"
   },
   "engines": {
     "node": "6.x"
